# AoC2023

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
lib/AocHelper/include/: AoCHelper.h  helper_functions.h
src/: CMakeLists.txt
src/day01/: CMakeLists.txt  digit_handler.cc  digit_handler.h  main.cc  solutions.cc
src/day01/test/: unit_tests.cc
src/day02/: CMakeLists.txt  main.cc  solutions.cc
src/day02/test/: unit_tests.cc
src/day03/: CMakeLists.txt  main.cc  number_cruncher.cc  number_cruncher.h  placeholder.cc  placeholder.h  solutions.cc  symbol_processing.cc  symbol_processing.h
src/day03/test/: unit_tests.cc
src/day04/: CMakeLists.txt  main.cc  placeholder.cc  placeholder.h  solutions.cc
src/day04/test/: unit_tests.cc
src/day05/: CMakeLists.txt  main.cc  map_parser.cc  map_parser.h  placeholder.cc  solutions.cc  solutions.h
src/day05/test/: unit_tests.cc
src/day06/: CMakeLists.txt  main.cc  solutions.cc  solutions.h
src/day06/test/: unit_tests.cc
src/day07/: CMakeLists.txt  hand.cc  hand.h  main.cc  solutions.cc
src/day07/test/: unit_tests.cc
src/day08/: CMakeLists.txt  main.cc  node.cc  node.h  solutions.cc  solutions.h
src/day08/test/: unit_tests.cc
src/day09/: CMakeLists.txt  main.cc  sequence_extrapolation.cc  sequence_extrapolation.h  solutions.cc
src/day09/test/: unit_tests.cc
src/day10/: CMakeLists.txt  main.cc  placeholder.cc  placeholder.h  solutions.cc  solutions.h  tile_parser.cc  tile_parser.h
src/day10/test/: unit_tests.cc
src/day11/: CMakeLists.txt  galaxy_processing.cc  galaxy_processing.h  main.cc  placeholder.cc  placeholder.h  solutions.cc  solutions.h
src/day11/test/: unit_tests.cc
src/day12/: CMakeLists.txt  main.cc  placeholder.cc  placeholder.h  solutions.cc
src/day12/test/: unit_tests.cc
tools/: boilerplate_code_generator.sh  update_aochelper.sh
